# runbook-rs

./: Cargo.toml  LICENSE  README.md  out.txt  runbook.yaml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: break-task.md  open-issue.md  open-pr.md  prep-pr.md  run-gates.md  write-receipt.md
claude-plugin/hooks/: hooks.json
crates/runbook-agent-fsm/: Cargo.toml
crates/runbook-agent-fsm/src/: lib.rs
crates/runbook-bash-policy/: Cargo.toml
crates/runbook-bash-policy/src/: lib.rs
crates/runbook-claude/: package.json
crates/runbook-claude/skills/break-task/: SKILL.md
crates/runbook-claude/skills/prep-pr/: SKILL.md
crates/runbook-claude/skills/receipt/: SKILL.md
crates/runbook-config/: Cargo.toml
crates/runbook-engine/: Cargo.toml
crates/runbook-engine/src/: config.rs  lib.rs  reducer.rs  render.rs
crates/runbook-hook-reducer/: Cargo.toml
crates/runbook-hook-reducer/src/: lib.rs
crates/runbook-hook-state/: Cargo.toml
crates/runbook-hook-state/src/: lib.rs
crates/runbook-hooks/: Cargo.toml
crates/runbook-hooks-policy/: Cargo.toml
crates/runbook-hooks-policy/src/: lib.rs
crates/runbook-hooks/src/: main.rs
crates/runbook-policy/: Cargo.toml
crates/runbook-policy/src/: lib.rs
crates/runbook-protocol/: Cargo.toml
crates/runbook-protocol/fixtures/: client_hello.json  daemon_hello_ack.json  hook_event.json  keypad_press.json  page_nav.json  render.json  terminals_snapshot.json  vscode_command.json
crates/runbook-protocol/schema/: client_to_daemon.schema.json  daemon_to_client.schema.json  render_model.schema.json
crates/runbook-protocol/src/: lib.rs
crates/runbook-render/: Cargo.toml
crates/runbook-render/src/: lib.rs
crates/runbook-session-resolver/: Cargo.toml
crates/runbook-session-resolver/src/: lib.rs
crates/runbookd/: Cargo.toml
crates/runbookd/src/: config.rs  lib.rs  main.rs  reducer.rs  render.rs  state.rs
crates/runbookd/tests/: bdd.rs
crates/runbookd/tests/features/: gating.feature  multi_session.feature  safety.feature  truthfulness.feature
docs/: architecture.md  protocol.md
examples/: simulate-hooks.sh
