[package]
name = "runbook-hooks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hook consumer binary for Claude Code -> Runbook daemon."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
runbook-protocol = { path = "../runbook-protocol" }
# HTTP client for WebSocket fallback (optional)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

