[package]
name = "runbook-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared protocol types for Runbook (daemon <-> clients)."

[dependencies]
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

